# oncoextract

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  spark-entrypoint.sh
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
dbt_oncoextract/: .user.yml  dbt_project.yml  profiles.yml
dbt_oncoextract/models/marts/: mart_cancer_studies.sql  mart_treatment_outcomes.sql  marts.yml
dbt_oncoextract/models/staging/: sources.yml  stg_pubmed_abstracts.sql  stg_pubmed_abstracts.yml
oncoextract/: __init__.py
oncoextract/ai/: extract.py  hitl_metrics.py  summarize.py
oncoextract/dagster_defs/: __init__.py  assets.py  jobs.py
oncoextract/db/: models.py
oncoextract/ingest/: pubmed.py  s3.py
oncoextract/spark/: clean.py
scripts/: migrate_001_original_extracted_json.sql
streamlit_app/: app.py
tests/: test_extract.py  test_hitl_metrics.py  test_ingest.py  test_spark.py  test_summarize.py
